<resources>
    <string name="app_name">Avian Store</string>

    <string name="batch_id">Batch ID:</string>
    <string name="brand">Brand:</string>
    <string name="category">Category:</string>
    <string name="specification">Specification:</string>
    <string name="price">Price:</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_product">Add Product</string>
    <string name="quantity">Quantity:</string>
    <string name="edit_product">EDIT PRODUCT</string>
    <string name="save">save</string>

    <string name="expense_type">Expense Type</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="code">Code:</string>
    <string name="valid_from">Valid from:</string>
    <string name="valid_till">Valid till:</string>
    <string name="type">Type:</string>
    <string name="value">Value:</string>
    <string name="percentage">Percentage</string>
    <string name="edit_coupon">Edit Coupon</string>
    <string name="add_coupon">Add Coupon</string>
    <string name="header_add_product">ADD PRODUCT</string>
    <string name="delete_coupon">Delete Coupon</string>
    <string name="are_you_sure_you_want_to_delete_this_coupon">Are you sure you want to delete this coupon?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="edit_gift">Edit Gift</string>
    <string name="Product_code">Product code:</string>
    <string name="min_bill">Minimum bill:</string>

    <string-array name="userTypes">
        <item>All Users</item>
        <item>Super Admin</item>
        <item>Store Admin</item>
        <item>Store Manager</item>
        <item>Store Staff</item>
    </string-array>

    <string-array name="signUpUserTypes">
        <item>Store Staff</item>
        <item>Store Manager</item>
        <item>Store Admin</item>
    </string-array>

    <string-array name="couponType">
        <item>%</item>
        <item>₹</item>
    </string-array>

    <string-array name="yesNo">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="status">
        <item>Pending</item>
        <item>Approved</item>
        <item>Rejected</item>
    </string-array>

    <string-array name="action">
        <item>View</item>
        <item>Approve</item>
        <item>Reject</item>
    </string-array>

    <array name="genders">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>